# CS-380-Final-Project

./: .gitignore  README.md  structure.docx
project/: CMakeLists.txt
project/app/: main.cpp
project/assets/shaders/: cloth.frag  cloth.frag.spv  cloth.vert  cloth.vert.spv
project/core/cloth/: cloth_builder.cpp  cloth_builder.hpp  cloth_model.hpp
project/core/colliders/: colliders.hpp
project/core/common/: config.hpp  logger.hpp  result.hpp  timer.hpp  types.hpp
project/input/: interaction.hpp  window.hpp
project/interop/: cuda_vk_interop.hpp
project/physics/: i_physics_solver.hpp
project/physics/cpu/: cpu_solver.cpp
project/physics/cuda/: cuda_buffers.hpp  cuda_solver.cu  cuda_solver.hpp
project/render/: camera.hpp  i_render.hpp  vertex.hpp
project/render/vulkan/: vk_renderer.cpp  vk_renderer.hpp
project/sim/: scene.hpp  simulator.hpp
project/ui/: ui_panel.cpp  ui_panel.hpp  ui_state.hpp
